# polinfo

./: .dockerignore  .gitignore  README.md  build  schema.psql
Dockerfile/: Dockerfile.postgres
polinfo/: .env  .gitignore  Cargo.toml
polinfo-dg/: anforanden-ingestion.py  anforanden-scraping.py  fix-riksdagen-csvt.py
polinfo-explore/: allowed-words.txt  disallowed-words.txt  inspect_wordcloud.py  swedish-stop-words.txt  word-standards.txt
polinfo-web/: .gitignore  package-lock.json  package.json
polinfo-web/public/: index.html
polinfo-web/src/: App.svelte
polinfo-web/src/api/: anforande.js  api.js
polinfo-web/src/routes/: About.svelte  Anforanden.svelte  Home.svelte
polinfo-web/src/routes/components/: AnforandeWordCloud.svelte  Anforanden.svelte  DoubleRangeSlider.svelte  PartiSymbol.svelte  WordCloud.svelte
polinfo-web/src/utils/: counts.js
polinfo/sql/: anforande_by_affiliation.psql
polinfo/src/: cache.rs  core.rs  db.rs  main.rs  prefixsum.rs  textprocessing.rs
