[package]
name = "polinfo"
version = "0.1.0"
authors = ["Jonas Valfridsson <jonas@valfridsson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
deadpool-postgres = "0.5.0"
config = "0.11.0"
dotenv = "0.15.0"
serde = "1.0.126"
tokio-postgres = { version = "0.5.1", features=["with-chrono-0_4"]}
chrono = { version = "0.4.19", features=["serde"]}
derive_more = "0.99.14"
log = "0.4.0"
env_logger = "0.8.3"
itertools = "0.10.0"
regex = "1"
actix-cors = "0.3.0"
